2003-01-20  John Dallaway  <jld@ecoscentric.com>

	Makefile: Simplify by reference to ecos.mak